Bug 747554 - Parsing destructuring short-hand should note name use like normal identifiers (r=waldo)