js/src/jit-test/tests/basic/testBug747554.js
@@ -1,0 +1,6 @@
+assertEq((function(x) {
+    (function () { x++ })();
+    var z;
+    ({ z } = { z:'ponies' })
+    return z;
+})(), 'ponies');
